--- a/src/main/resources/static/footer.html
+++ b/src/main/resources/static/footer.html
@@ -4,11 +4,11 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
     <link rel="stylesheet"
-          href="../static/resource/bootstrap/css/bootstrap.min.css">
-    <script src="../static/resource/js/jquery.js"></script>
-    <script src="../static/resource/bootstrap/js/bootstrap.min.js"></script>
+          href="resource/bootstrap/css/bootstrap.min.css">
+    <script src="resource/js/jquery.js"></script>
+    <script src="resource/bootstrap/js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css"
-          href="../static/resource/css/overall.css"/>
+          href="resource/css/overall.css"/>
 </head>
 <body>
 <footer class="footer-distributed">
