--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,8 +3,10 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 <title>ShoppingWebSite</title>
-<link rel="icon" type="image/x-icon" href="/static/resource/images/favicon.png"/>
-<script src="/WEB-INF/resource/js/jquery.js"></script>
+<link rel="icon" type="image/x-icon" href="static/resource/images/favicon.png"/>
+<script src="static/resource/js/jquery.js"></script>
+<script src="resource/js/jquery.js"></script>
+<script src="js/jquery.js"></script>
 <script>
 	$(function(){
 		$("#navbar").load("navbar.html");
