--- a/src/main/resources/static/navbar.html
+++ b/src/main/resources/static/navbar.html
@@ -2,18 +2,18 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-    <link rel="icon" type="image/x-icon" href="../static/resource/images/favicon.png"/>
-    <link rel="stylesheet" href="../static/resource/bootstrap/css/bootstrap.min.css"/>
-    <script src="../static/resource/js/jquery.js"></script>
-    <script src="../static/resource/bootstrap/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="../static/resource/css/overall.css"/>
+    <link rel="icon" type="image/x-icon" href="resource/images/favicon.png"/>
+    <link rel="stylesheet" href="resource/bootstrap/css/bootstrap.min.css"/>
+    <script src="resource/js/jquery.js"></script>
+    <script src="resource/bootstrap/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="resource/css/overall.css"/>
 </head>
 
 <body>
 <nav class="navbar navbar-inverse">
     <div  class="container-fluid">
         <div class="navbar">
-            <img src="../static/resource/images/logo.png" width="210px" height="130px" alt="logo-image"/>
+            <img src="resource/images/logo.png" width="210px" height="130px" alt="logo-image"/>
         </div>
 
         <div class="collapse navbar-collapse" id="myNavbar">
