--- a/src/main/resources/static/productGrid.html
+++ b/src/main/resources/static/productGrid.html
@@ -4,9 +4,9 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
     <link rel="stylesheet"
-          href="../static/resource/bootstrap/css/bootstrap.min.css"/>
-    <script src="../static/resource/js/jquery.js"></script>
-    <script src="../static/resource/bootstrap/js/bootstrap.min.js"></script>
+          href="resource/bootstrap/css/bootstrap.min.css"/>
+    <script src="resource/js/jquery.js"></script>
+    <script src="resource/bootstrap/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
@@ -24,7 +24,7 @@
 <hr>
 <div class="w3-row-padding" style="padding:0px 250px; margin-bottom: 20px">
     <div class="w3-third w3-container w3-margin-bottom">
-        <img src="../static/resource/images/products/sonyA7M2.jpg" alt="Norway" style="width: 100%"
+        <img src="resource/images/products/sonyA7M2.jpg" alt="Norway" style="width: 100%"
              class="w3-hover-opacity">
         <div class="w3-container w3-white" style="padding:0px 30px;">
             <p>
@@ -42,7 +42,7 @@
     </div>
 
     <div class="w3-third w3-container w3-margin-bottom">
-        <img src="../static/resource/images/products/sonyxm3.jpg" alt="Norway" style="width: 100%"
+        <img src="resource/images/products/sonyxm3.jpg" alt="Norway" style="width: 100%"
              class="w3-hover-opacity">
         <div class="w3-container w3-white" style="padding:0px 50px;">
             <p>
@@ -59,7 +59,7 @@
         </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
-        <img src="../static/resource/images/products/playstation.jpg" alt="Norway" style="width: 100%"
+        <img src="resource/images/products/playstation.jpg" alt="Norway" style="width: 100%"
              class="w3-hover-opacity">
         <div class="w3-container w3-white" style="padding:20px 10px;">
             <p>
@@ -80,7 +80,7 @@
 <hr>
 <div class="w3-row-padding" style="padding:0px 250px; margin-bottom: 20px">
     <div class="w3-third w3-container w3-margin-bottom">
-        <img src="../static/resource/images/products/iphoneXR.jpg" alt="Norway" style="width: 100%"
+        <img src="resource/images/products/iphoneXR.jpg" alt="Norway" style="width: 100%"
              class="w3-hover-opacity">
         <div class="w3-container w3-white" style="padding:0px 50px;">
             <p>
@@ -98,7 +98,7 @@
     </div>
 
     <div class="w3-third w3-container w3-margin-bottom" style="padding-top:100px">
-        <img src="../static/resource/images/products/macbook.jpg" alt="Norway" style="width: 100%"
+        <img src="resource/images/products/macbook.jpg" alt="Norway" style="width: 100%"
              class="w3-hover-opacity">
         <div class="w3-container w3-white" style="padding:84px 50px;">
             <p>
@@ -115,7 +115,7 @@
         </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
-        <img src="../static/resource/images/products/ipad.jpg" alt="Norway" style="width: 100%"
+        <img src="resource/images/products/ipad.jpg" alt="Norway" style="width: 100%"
              class="w3-hover-opacity">
         <div class="w3-container w3-white" style="padding:16px 60px;">
             <p>
