--- a/src/main/resources/static/slider.html
+++ b/src/main/resources/static/slider.html
@@ -3,11 +3,11 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 <link rel="stylesheet"
-	href="../static/resource/bootstrap/css/bootstrap.min.css"/>
-<script src="../static/resource/js/jquery.js"></script>
-<script src="../static/resource/bootstrap/js/bootstrap.min.js"></script>
+	href="resource/bootstrap/css/bootstrap.min.css"/>
+<script src="resource/js/jquery.js"></script>
+<script src="resource/bootstrap/js/bootstrap.min.js"></script>
 <link rel="stylesheet" type="text/css"
-	href="../static/resource/css/overall.css"/>
+	href="resource/css/overall.css"/>
 	
 </head>
 <body>
@@ -26,18 +26,18 @@
 				<!-- Wrapper for slides -->
 				<div class="carousel-inner" role="listbox">
 					<div class="item active">
-						<img src="../static/resource/images/shopping1.jpg" style="width:100%;" alt="Image1">
+						<img src="resource/images/shopping1.jpg" style="width:100%;" alt="Image1">
 					</div>
 					<div class="item">
-						<img src="../static/resource/images/pixel.jpg" style="width:100%;" alt="Image2">
-					</div>
-
-					<div class="item">
-						<img src="../static/resource/images/shopping.jpg" style="width:100%;" alt="Image3">
+						<img src="resource/images/pixel.jpg" style="width:100%;" alt="Image2">
 					</div>
 
 					<div class="item">
-						<img src="../static/resource/images/buy.jpg" style="width:100%;" alt="Image4">
+						<img src="resource/images/shopping.jpg" style="width:100%;" alt="Image3">
+					</div>
+
+					<div class="item">
+						<img src="resource/images/buy.jpg" style="width:100%;" alt="Image4">
 					</div>
 				</div>
 
